--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explore the epic world of Indian mythology with The Mythicz. Uncover timeless stories, legendary heroes, and immersive gaming experiences.">
+    <meta name="keywords" content="Indian Mythology, Games, VR, AR, AI, Interactive Storytelling">
+    <meta name="author" content="The Mythicz">
     <title>The Mythicz</title>
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;600&display=swap" rel="stylesheet">
     <style>
@@ -97,75 +100,6 @@
             color: #ffc107;
         }
 
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 2rem;
-        }
-
-        .card {
-            background: #1e2022;
-            padding: 2rem;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        .card h3 {
-            font-size: 1.5rem;
-            color: #ffc107;
-            margin-bottom: 1rem;
-        }
-
-        .card p {
-            font-size: 1rem;
-            color: #ddd;
-        }
-
-        footer {
-            padding: 2rem;
-            text-align: center;
-            background: #000;
-            color: #fff;
-            font-size: 0.9rem;
-        }
-
-        footer a {
-            color: #ffc107;
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
-        }
-
-        .button-link {
-            display: inline-block;
-            margin-top: 1rem;
-            background-color: #ffc107;
-            color: #000;
-            padding: 0.8rem 1.5rem;
-            border-radius: 5px;
-            text-decoration: none;
-            font-size: 1rem;
-            font-weight: bold;
-            text-align: center;
-            transition: background 0.3s, transform 0.2s;
-        }
-
-        .button-link:hover {
-            background-color: #e6a700;
-            transform: scale(1.05);
-        }
-
-
-        /* Contact Links */
-        .contact a {
-            color: #ffc107;
-            font-size: 1.1rem;
-            margin: 0.5rem;
-            text-decoration: none;
-            display: inline-block;
-        }
         .timeline {
             position: relative;
             margin: 0 auto;
@@ -221,6 +155,7 @@
         .timeline-event.right::before {
             left: -10px;
         }
+
         @media (max-width: 768px) {
             header h1 {
                 font-size: 2.5rem;
@@ -241,7 +176,7 @@
                 left: 50%;
                 transform: translateX(-50%);
             }
-
+        }
     </style>
 </head>
 
@@ -271,16 +206,12 @@
         <div class="timeline">
             <div class="timeline-event left">
                 <h2>About Us</h2>
-                <p>We explore the vast and intricate tapestry of India's ancient mythological heritage, uncovering timeless stories, revered deities, and legendary heroes that have shaped the cultural fabric of the nation. With their profound narratives and enduring wisdom, these tales provide a foundation for crafting gaming worlds that are as immersive as they are enlightening. Each story serves as a gateway to a universe filled with vibrant landscapes, divine encounters, and epic quests, offering players a unique opportunity to connect with the richness of Indian mythology.  
-    
-                By merging these captivating legends with cutting-edge interactive gameplay, we transform traditional lore into dynamic experiences that resonate with modern audiences. Players can engage with moral dilemmas, embody heroic archetypes, and explore the timeless themes of good versus evil, duty, and destiny. Through this fusion of mythology and technology, we aim to transport players into realms of wonder and adventure, fostering a deeper appreciation for the cultural and spiritual treasures of India's mythological past.</p>
-                <a href="about us.html" class="button-link">Learn more about us</a>  
+                <p>We explore the vast and intricate tapestry of India's ancient mythological heritage...</p>
+                <a href="about us.html" class="button-link">Learn more about us</a>
             </div>
             <div class="timeline-event right">
                 <h2>Why Us?</h2>
-                <p>At The Mythicz, we offer a unique blend of ancient mythological narratives and cutting-edge interactive experiences. Our team is dedicated to reimagining India's rich mythological heritage, transforming timeless stories into immersive worlds that resonate with today's audiences. With a deep respect for tradition and a passion for innovation, we create unforgettable adventures where players can explore moral dilemmas, embody legendary heroes, and experience epic quests.</p>
-                <p>We don’t just tell stories; we bring them to life in ways that spark creativity, foster community, and invite you to experience the profound lessons embedded in these ancient myths. Whether you’re a gamer, a creator, or simply a mythology enthusiast, our vision is to create a space where everyone can connect, learn, and embark on legendary journeys.</p>
-                <p>Join us in shaping the future of interactive mythology. Experience the power of legends, connect with like-minded individuals, and be a part of a movement that celebrates the richness of India's mythological past while embracing the possibilities of the future.</p>
+                <p>At The Mythicz, we offer a unique blend of ancient mythological narratives and cutting-edge interactive experiences...</p>
             </div>
         </div>
     </section>
