--- a/index.html
+++ b/index.html
@@ -177,6 +177,24 @@
                 transform: translateX(-50%);
             }
         }
+        .button-link {
+            display: inline-block;
+            margin-top: 1.5rem;
+            background-color: #ffc107;
+            color: #000;
+            padding: 0.8rem 2rem;
+            border-radius: 8px;
+            text-decoration: none;
+            font-size: 1.1rem;
+            font-weight: bold;
+            text-align: center;
+            transition: background 0.3s, transform 0.2s;
+        }
+
+        .button-link:hover {
+            background-color: #e6a700;
+            transform: scale(1.05);
+        }
     </style>
 </head>
 
