--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             top: 0;
             width: 4px;
             height: 100%;
-            background: #58a6ff;
+            background: #ffc107;
             transform: translateX(-50%);
         }
 
@@ -142,10 +142,10 @@
             top: 20px;
             width: 15px;
             height: 15px;
-            background: #58a6ff;
+            background: #ffc107;
             border-radius: 50%;
             border: 3px solid #0d1117;
-            box-shadow: 0 0 0 4px rgba(88, 166, 255, 0.5);
+            box-shadow: 0 0 0 4px #ffc107;
         }
 
         .timeline-event.left::before {
@@ -201,23 +201,17 @@
 <body>
     <header>
         <div class="logo">The Mythicz</div>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#about-us">About</a>
-            <a href="#work">Our Work</a>
-            <a href="#games">Games</a>
-            <a href="#creativity">Creativity</a>
-            <a href="#community">Community</a>
-            <a href="help.html">Help</a>
-            <a href="#quotes">Quotes</a>
-            <a href="#contact">Contact</a>
-        </nav>
     </header>
 
     <section class="hero">
         <h1>Unleash the Indian Mythology</h1>
         <p>Embark on an epic journey through the myths of India. Discover heroes, gods, and stories reimagined.</p>
-        <a href="#about-us" class="button-link">Explore Now</a>
+        <nav>
+            <a href="#about-us" class="button-link">Explore Now</a>
+            <a href="#quotes" class="button-link">Quotes</a>
+            <a href="help.html" class="button-link">Help</a>
+            <a href="#contact" class="button-link">Contact</a>
+        </nav>
     </section>
 
     <section id="about-us">
@@ -228,67 +222,60 @@
                 <a href="about us.html" class="button-link">Learn more about us</a>
             </div>
             <div class="timeline-event right">
-                <h2>Why Us?</h2>
-                <p>At The Mythicz, we offer a unique blend of ancient mythological narratives and cutting-edge interactive experiences...</p>
+                <h2>Our Mission</h2>
+                <p>Our mission is to bring the magic of Indian mythology to a global audience...</p>
+                <a href="mission.html" class="button-link">Discover our mission</a>
             </div>
-        </div>
-    </section>
-    
-    <section id="work">
-        <h2>Work</h2>
-        <p>Discover more about the impactful work we do and the mission that drives us to make a difference. Explore how our initiatives align with our commitment to creating meaningful change in the communities we serve. Our work is driven by a passion for storytelling, a commitment to excellence, and a dedication to creating immersive experiences that inspire, educate, and entertain. Through our projects, we aim to bring the magic of Indian mythology to a global audience, fostering a deeper appreciation for the cultural heritage and spiritual wisdom of the ancient world. From interactive games to educational resources, we strive to create content that resonates with diverse audiences, transcends boundaries, and sparks curiosity and creativity in all who engage with it. Join us on our journey to explore the myths of India and unlock the power of storytelling to transform lives and inspire change. Are you ready to embark on an epic adventure? Explore our projects and discover the magic of Indian mythology.</p>
-        <a href="work.html" class="button-link">Learn more</a> 
-    </section>
-
-    <section id="games">
-        <h2>Games</h2>
-        <p>Explore our collection of games inspired by the myths of India. Each game offers a unique blend of storytelling, gameplay, and artistry, inviting players to embark on epic adventures, face divine challenges, and uncover the mysteries of the ancient world. From action-packed battles to intricate puzzles, our games are designed to captivate, challenge, and inspire players of all ages. Whether you're a seasoned gamer or new to the world of interactive entertainment, our diverse portfolio has something for everyone. Immerse yourself in the myths of India, discover the power of storytelling, and experience the magic of gaming like never before. Join us on a journey through the realms of gods and demons, heroes and villains, and unlock the secrets of India's mythological past. Are you ready to unleash the legends? Explore our collection of games and embark on an epic adventure through the myths of India.</p>
-        <a href="games.html" class="button-link">Explore our projects</a> 
-    </section>
-
-    <section id="creativity">
-        <h2>Igniting Imagination</h2>
-        <p>At The Mythicz, creativity lies at the heart of our journey. By breathing new life into ancient myths and designing dynamic gaming worlds, we infuse every aspect of our work with limitless imagination. Our team of talented artists, writers, and developers work together to create experiences that seamlessly blend tradition with innovation.</p>
-        <p>Enter worlds where gods coexist with mortals, mythical creatures roam untamed, and every narrative is a masterpiece waiting to unfold. Through each game, we invite you to dream, create, and embark on limitless adventures inspired by the rich mythological heritage of India.</p>
-        <a href="creativity.html" class="button-link">Join Us</a>
-    </section>
-    
-    <section id="community">
-        <h2>Join Our Community</h2>
-        <p>Connect with fellow mythic enthusiasts, share your thoughts, and stay updated on the latest news and events.</p>
-        <div class="grid">
-            <div class="card">
-                <h3>Discord</h3>
-                <p>Join our Discord server to chat with fellow players, share your experiences, and participate in community events.</p>
-                <a href="https://discord.gg/FSpw6zH6Ns" class="button-link">Join Us on Discord</a>
+            <div class="timeline-event left">
+                <h2>Our Vision</h2>
+                <p>Our vision is to create immersive experiences that inspire, educate, and entertain...</p>
+                <a href="vision.html" class="button-link">Explore our vision</a>
             </div>
-            <div class="card">
-                <h3>Share Your Journey</h3>
-                <p>Got a story to share? Click below to email us and tell us what brought you here!</p>
-                <a href="mailto:themythicz@gmail.com" class="button-link">Email Us</a>
+            <div class="timeline-event right">
+                <h2>Work</h2>
+                <p>Discover more about the impactful work we do and the mission that drives us to make a difference...</p>
+                <a href="work.html" class="button-link">Learn more</a>
+            </div>
+            <div class="timeline-event left">
+                <h2>Games</h2>
+                <p>Explore our collection of games inspired by the myths of India...</p>
+                <a href="games.html" class="button-link">Explore our projects</a> 
+            </div>
+            <div class="timeline-event right">
+                <h2>Igniting Imagination</h2>
+                <p>At The Mythicz, creativity lies at the heart of our journey...</p>
+                <a href="creativity.html" class="button-link">Join Us</a>
+            </div>
+            <div class="timeline-event left">
+                <h2>Join Our Community</h2>
+                <p>Connect with fellow mythic enthusiasts, share your thoughts, and stay updated on the latest news and events...</p>
+                <a href="https://discord.gg/YA296Wte" class="button-link">Join Us on Discord</a>
+                <a href="https://www.instagram.com/the.myticz/" class="button-link">Follow Us</a>
+                <a href="https://twitter.com/TheMyticz" class="button-link">Tweet Us</a>
+                <a href="https://www.linkedin.com/company/themythicz/" class="button-link">Connect</a>
             </div>
         </div>
     </section>
 
     <section id="quotes">
         <h2>Words of Wisdom</h2>
-        <div class="quote-container">
-            <div class="quote-card">
-                <blockquote>
+        <div class="timeline">
+            <div class="timeline-event left">
+                <p>
                     "Do not be afraid to stand for what you believe in, even if that means standing alone."
-                </blockquote>
+                </p>
                 <p>- Valmiki</p>
             </div>
-            <div class="quote-card">
-                <blockquote>
+            <div class="timeline-event right">
+                <p>
                     "Dharma is more important than any divine boon."
-                </blockquote>
+                </p>
                 <p>- Lord Rama</p>
             </div>
-            <div class="quote-card">
-                <blockquote>
+            <div class="timeline-event left">
+                <p>
                     "The right path is one that is difficult to walk on, yet it brings happiness."
-                </blockquote>
+                </p>
                 <p>- Valmiki</p>
             </div>
         </div>
