--- a/mission.html
+++ b/mission.html
@@ -174,10 +174,10 @@
             seamlessly meets modern innovation. Our vision encompasses:
         </p>
         <ul>
-            <li><strong>Reignite Cultural Pride:</strong> Showcase timeless epics like the <em>Mahabharata</em>, <em>Ramayana</em>, and <em>Vedas</em> in a format that resonates with today’s tech-savvy audience.</li>
-            <li><strong>Foster Global Curiosity:</strong> Introduce audiences worldwide to India's mythology, offering an engaging gateway to connect with these legendary narratives.</li>
-            <li><strong>Empower Creativity:</strong> Inspire users to step into these stories, interact with the mythological world, and reimagine its wonders in their own unique way.</li>
-            <li><strong>Preserve Heritage:</strong> Leverage technology to ensure India's rich cultural stories are accessible, engaging, and cherished by future generations.</li>
+            <p><strong>Reignite Cultural Pride:</strong> Showcase timeless epics like the <em>Mahabharata</em>, <em>Ramayana</em>, and <em>Vedas</em> in a format that resonates with today’s tech-savvy audience.</p>
+            <p><strong>Foster Global Curiosity:</strong> Introduce audiences worldwide to India's mythology, offering an engaging gateway to connect with these legendary narratives.</p>
+            <p><strong>Empower Creativity:</strong> Inspire users to step into these stories, interact with the mythological world, and reimagine its wonders in their own unique way.</p>
+            <p><strong>Preserve Heritage:</strong> Leverage technology to ensure India's rich cultural stories are accessible, engaging, and cherished by future generations.</p>
         </ul>
         <p>
             Whether you’re a history enthusiast, an avid gamer seeking new adventures, or someone eager to explore extraordinary worlds, 
