--- a/mission.html
+++ b/mission.html
@@ -154,6 +154,7 @@
         <h1>Welcome to The Mythicz</h1>
         <p>Explore the captivating world of Indian mythology, where ancient tales of gods, heroes, and mythical creatures come to life through advanced technology. Experience epic battles, divine interventions, and timeless lessons like never before. Immerse yourself in interactive storytelling and groundbreaking experiences that blend tradition with innovation.</p>
         <nav>
+            <a href="index.html" class="button-link">Home</a>
             <a href="#about-us" class="button-link">Our Mission</a>
             <a href="vision.html" class="button-link">Vision</a>
             <a href="work.html" class="button-link">Work</a>
