--- a/index.html
+++ b/index.html
@@ -224,12 +224,12 @@
             <div class="timeline-event right">
                 <h2>Our Mission</h2>
                 <p>Our mission is to bring the magic of Indian mythology to a global audience...</p>
-                <a href="mission.html" class="button-link">Discover our mission</a>
+                <a href="about us.html" class="button-link">Discover our mission</a>
             </div>
             <div class="timeline-event left">
                 <h2>Our Vision</h2>
                 <p>Our vision is to create immersive experiences that inspire, educate, and entertain...</p>
-                <a href="vision.html" class="button-link">Explore our vision</a>
+                <a href="about us.html" class="button-link">Explore our vision</a>
             </div>
             <div class="timeline-event right">
                 <h2>Work</h2>
