--- a/about us.html
+++ b/about us.html
@@ -53,6 +53,12 @@
             margin-top: 4rem;
         }
 
+        h1 {
+            font-size: 3rem;
+            margin-bottom: 1rem;
+            color: #ffc107;
+        }
+
         h2 {
             font-size: 2.5rem;
             margin-bottom: 1rem;
@@ -225,16 +231,20 @@
 <body>
     <header>
         <div class="logo">The Mythicz</div>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="#about-us">About</a>
-            <a href="work.html">Our Work</a>
-            <a href="games.html">Games</a>
-            <a href="careers.html">Careers</a>
-            <a href="creativity.html">Creativity</a>
-            <a href="help.html">Help</a>
-        </nav>
     </header>
+
+    <section class="hero">
+        <h1>Step into the world of The Mythicz.</h1>
+        <p>Embark on a legendary journey through India’s myths. Uncover reimagined tales of gods, heroes, and timeless stories.</p>
+        <nav>
+            <a href="index.html" class="button-link">Home</a>
+            <a href="#about-us" class="button-link">About</a>
+            <a href="work.html" class="button-link">Our Work</a>
+            <a href="games.html" class="button-link">Games</a>
+            <a href="creativity.html" class="button-link">Creativity</a>
+            <a href="help.html" class="button-link">Help</a>
+        </nav>
+    </section>
 
     <section id="about-us">
         <h2>About Us</h2>
