--- a/help.html
+++ b/help.html
@@ -59,6 +59,12 @@
             color: #ffc107;
         }
 
+        h1 {
+            font-size: 3rem;
+            margin-bottom: 1rem;
+            color: #ffc107;
+        }
+
         p {
             line-height: 1.6;
             font-size: 1.1rem;
@@ -227,17 +233,22 @@
         <div class="logo">The Mythicz</div>
     </header>
 
+    <section class="hero">
+        <h1>Enter the realm of The Mythicz.</h1>
+        <p>Dive into a mythical adventure through India's legends. Explore reimagined tales of gods, heroes, and eternal stories.</p>
+        <nav>
+            <a href="index.html" class="button-link">Home</a>
+            <a href="about us.html" class="button-link">About</a>
+            <a href="work.html" class="button-link">Our Work</a>
+            <a href="games.html" class="button-link">Games</a>
+            <a href="creativity.html" class="button-link">Creativity</a>
+            <a href="#help.html" class="button-link">Help</a>
+        </nav>
+    </section>
+
     <section id="help">
         <h2>Get Help</h2>
         <p>Need assistance? We're here to help! Whether you have general inquiries, need technical support, or want to connect with us on social media, we've got you covered. Check out the options below to get the help you need:</p>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about us.html">About</a>
-            <a href="work.html">Our Work</a>
-            <a href="games.html">Games</a>
-            <a href="creativity.html">Creativity</a>
-            <a href="#help">Help</a>
-        </nav>
         <div class="timeline">
             <div class="timeline-event left">
                 <h3>General Inquiries</h3>
