--- a/help.html
+++ b/help.html
@@ -242,7 +242,7 @@
             <a href="work.html" class="button-link">Our Work</a>
             <a href="games.html" class="button-link">Games</a>
             <a href="creativity.html" class="button-link">Creativity</a>
-            <a href="#help.html" class="button-link">Help</a>
+            <a href="#help" class="button-link">Help</a>
         </nav>
     </section>
 
