--- a/work.html
+++ b/work.html
@@ -258,6 +258,18 @@
         </nav>
     </header>
 
+    <section class="hero">
+        <h1>Discover the wonders of The Mythicz</h1>
+        <p>Journey through India’s mythological world. Experience fresh takes on ancient tales of gods, heroes, and eternal legends.</p>
+        <nav>
+            <a href="index.html" class="button-link">Home</a>
+            <a href="about us.html" class="button-link">About</a>
+            <a href="#work" class="button-link">Our Work</a>
+            <a href="creativity.html" class="button-link">Creativity</a>
+            <a href="help.html" class="button-link">Help</a>
+        </nav>
+    </section>
+
     <section id="work">
         <h2>Our Work</h2>
         <p>Explore the projects and collaborations that bring our vision to life. From immersive gaming experiences to community-driven initiatives, our work speaks to the heart of storytelling and innovation.</p>
